--- a/AMD_project.ipynb
+++ b/AMD_project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AMD project",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIQXH1cn+8nXg1txPS2T21",
+      "authorship_tag": "ABX9TyM8Zm0LrzLQa5SK9EUJKYCY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,10 +160,22 @@
       "cell_type": "code",
       "source": [
         "# import as dataframe\n",
-        "data = spark.read.option(\"delimiter\", \"\\t\").option(\"header\", True).csv(\"title.principals.tsv/data.tsv\") "
+        "data = spark.read.option(\"delimiter\", \"\\t\").option(\"header\", True).csv(\"title.principals.tsv/data.tsv\").limit(10000) "
       ],
       "metadata": {
         "id": "6sSz0qYV0LMn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.cache()\n",
+        "data.count()"
+      ],
+      "metadata": {
+        "id": "s7iVJqBTTRJM"
       },
       "execution_count": null,
       "outputs": []
@@ -183,7 +195,7 @@
       "cell_type": "code",
       "source": [
         "# drop unwanted columns\n",
-        "data = data.drop(\"ordering\",\"category\",\"job\", \"characters\")"
+        "data1 = data.drop(\"ordering\",\"category\",\"job\", \"characters\")"
       ],
       "metadata": {
         "id": "9kul16g-19lR"
@@ -194,7 +206,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data.take(5)"
+        "data1.take(5)"
       ],
       "metadata": {
         "id": "KybhhdtI2mpy"
@@ -205,7 +217,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data.printSchema()"
+        "data1.printSchema()"
       ],
       "metadata": {
         "id": "83lOTb-lkM_R"
@@ -218,9 +230,9 @@
       "source": [
         "# rename columns\n",
         "\n",
-        "data = data.selectExpr(\"tconst as title\", \"nconst as actor\")\n",
+        "data2 = data1.selectExpr(\"tconst as title\", \"nconst as actor\")\n",
         "\n",
-        "data.printSchema()"
+        "data2.printSchema()"
       ],
       "metadata": {
         "id": "-iVve5mH4V_k"
@@ -250,10 +262,10 @@
       "source": [
         "# drop unwanted characters\n",
         "\n",
-        "data = data.withColumn(\"title\",udf_title_change(col(\"title\")))\n",
-        "data = data.withColumn(\"actor\",udf_actor_change(col(\"actor\")))\n",
+        "data3 = data2.withColumn(\"title\",udf_title_change(col(\"title\")))\n",
+        "data4 = data3.withColumn(\"actor\",udf_actor_change(col(\"actor\")))\n",
         "\n",
-        "data.show(5)"
+        "data4.show(5)"
       ],
       "metadata": {
         "id": "HJ8rBtLq7lkr"
@@ -273,10 +285,12 @@
     {
       "cell_type": "code",
       "source": [
-        "sc = spark.sparkContext"
+        "# create tuples with title and actor\n",
+        "\n",
+        "rdd = data4.rdd"
       ],
       "metadata": {
-        "id": "LomdBFNenV1k"
+        "id": "4MD2ipe-H_bq"
       },
       "execution_count": null,
       "outputs": []
@@ -284,11 +298,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# create tuples with title and actor\n",
-        "\n",
-        "rdd = data.rdd\n",
         "\n",
         "simple_rdd = rdd.map(tuple)\n",
+        "\n",
+        "\n",
+        "# sample dataset, take %, set seed 42\n",
+        "\n",
         "\n",
         "simple_rdd.take(5)"
       ],
@@ -301,12 +316,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# sample dataset, take 5%, set seed 42\n",
-        "\n",
-        "simple_rdd = simple_rdd.sample(False, 0.05, 42)"
+        "simple_rdd.count()"
       ],
       "metadata": {
-        "id": "lEdDWakVC5P_"
+        "id": "1EAbFdnOO8Vd"
       },
       "execution_count": null,
       "outputs": []
@@ -321,6 +334,17 @@
       ],
       "metadata": {
         "id": "2z_C6sVbr4Gw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inverted.count()"
+      ],
+      "metadata": {
+        "id": "ca-jf3PxMtLg"
       },
       "execution_count": null,
       "outputs": []
@@ -345,7 +369,7 @@
         "# remove self loops\n",
         "\n",
         "filtered = joined.filter(lambda x : x[1][0]!= x[1][1])\n",
-        "#filtered.take(2) "
+        "filtered.take(2) "
       ],
       "metadata": {
         "id": "xaO5hctZ5W3O"
@@ -356,10 +380,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# tengo la link list\n",
+        "# keep the link list\n",
         "\n",
         "links = filtered.map(lambda x : x[1])\n",
-        "#links.take(2) "
+        "links.take(2) "
       ],
       "metadata": {
         "id": "nPasjga__PIC"
@@ -370,6 +394,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# define function that computes the entries of the adjacency matrix\n",
+        "\n",
         "def adj(x,y):\n",
         "  \n",
         "  for elem in y:\n",
@@ -386,7 +412,7 @@
       "cell_type": "code",
       "source": [
         "adjacency1 = links.mapValues(lambda v: [v])\n",
-        "#adjacency1.take(2)"
+        "adjacency1.take(2)"
       ],
       "metadata": {
         "id": "7VC5qH-C-5u2"
@@ -397,10 +423,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#creo l'adjacency matrix\n",
+        "# create the adjacency matrix\n",
         "\n",
         "adjacency = adjacency1.reduceByKey(adj)\n",
-        "#adjacency.take(2) "
+        "adjacency.take(2) "
       ],
       "metadata": {
         "id": "tjdE5grwvfBn"
@@ -411,13 +437,16 @@
     {
       "cell_type": "code",
       "source": [
+        "# define function that computes the entries of the connection matrix\n",
+        "\n",
         "def conn(x):\n",
         "  k, v = x\n",
-        "  mario = []\n",
+        "  result = []\n",
         "  for vi in v:\n",
-        "    luigi = (k, vi, 1/len(v))\n",
-        "    mario.append(luigi)\n",
-        "  return mario"
+        "    entry = (k, vi, 1/len(v))\n",
+        "    result.append(entry)\n",
+        "  return result\n",
+        "\n"
       ],
       "metadata": {
         "id": "GrbU81ujfYQr"
@@ -428,10 +457,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# creo la connection matrix\n",
+        "# create the connection matrix\n",
         "\n",
         "connection = adjacency.flatMap(conn)\n",
-        "#connection.take(10) "
+        "connection.take(10) "
       ],
       "metadata": {
         "id": "_nEHmY0AFFTN"
@@ -442,7 +471,9 @@
     {
       "cell_type": "code",
       "source": [
-        "KL = sorted(connection.map(lambda x : x[0]).distinct().collect()) # keys list"
+        "# define the keys list\n",
+        "\n",
+        "KL = sorted(connection.map(lambda x : x[0]).distinct().collect()) "
       ],
       "metadata": {
         "id": "mDPGx6UfM_Pq"
@@ -453,7 +484,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# dizionario che mappa il codice di ogni film alla sua posizione in sequenza senza buchi\n",
+        "# dictionary that maps every movie id to its position in sequence\n",
         "\n",
         "dizionario = dict(zip(KL, range(len(KL)))) "
       ],
@@ -466,16 +497,18 @@
     {
       "cell_type": "code",
       "source": [
+        "# define map function\n",
+        "\n",
         "def remap(x):\n",
         "  \n",
-        "  #scompatta\n",
+        "  #scompose\n",
         "  k,v,f=x\n",
         "\n",
-        "  #mappa\n",
+        "  #map\n",
         "  k = dizionario[k]\n",
         "  v = dizionario[v]\n",
         "\n",
-        "  #ricompatta\n",
+        "  #recompose\n",
         "  nuovatupla = ((k),(v,f))\n",
         "\n",
         "  return nuovatupla\n",
@@ -492,7 +525,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# creo l'array che farà da page rank\n",
+        "# create the array for the page rank\n",
         "\n",
         "import numpy as np\n",
         "n = len(KL)\n",
@@ -519,7 +552,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# definisco una funzione che misura la distanza per far convergere il page rank\n",
+        "# define a function that measures the distance to make the page rank converge\n",
         "\n",
         "def l2distance(v, q):\n",
         "    \n",
@@ -537,7 +570,9 @@
     {
       "cell_type": "code",
       "source": [
-        "tolerance = 10e-40\n",
+        "# compute the page rank\n",
+        "\n",
+        "tolerance = 10e-12\n",
         "max_iterations = 350\n",
         " \n",
         "iteration = 0\n",
@@ -549,7 +584,7 @@
         "                        .collect()\n",
         "                       )\n",
         "    old_page_rank = page_rank\n",
-        "    print(page_rank_values[:3])\n",
+        "    print(page_rank[5])\n",
         "    page_rank = np.array([c for (i, c) in page_rank_values])\n",
         "    \n",
         "    # we use the nice_print function to show how the page_rank vector\n",
