--- a/AMD_project.ipynb
+++ b/AMD_project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AMD project",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjn1W6dHzQYKjOCHXcZMZ5",
+      "authorship_tag": "ABX9TyMcu+ZSd2qYVzZ5X0KTfdnm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "lKQifTHjY7AK",
-        "outputId": "bd95c674-178d-41b2-f6fb-04bf6eb1bdc2",
+        "outputId": "ab4ba890-83bd-4f44-b296-79cdc9351c68",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -54,13 +54,13 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
             "  Downloading pyspark-3.3.1.tar.gz (281.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 281.4 MB 47 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 281.4 MB 36 kB/s \n",
             "\u001b[?25hCollecting py4j==0.10.9.5\n",
             "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-            "\u001b[K     |████████████████████████████████| 199 kB 49.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 199 kB 47.7 MB/s \n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=5f37be9bd23c594ab439a15eac8a448469044b28d0318315f5860f15533ff9ef\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=fc53cce7006a350990e67317e694ce2ed7726a5d6df1753dd8483637044f0d51\n",
             "  Stored in directory: /root/.cache/pip/wheels/43/dc/11/ec201cd671da62fa9c5cc77078235e40722170ceba231d7598\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
@@ -112,7 +112,7 @@
       ],
       "metadata": {
         "id": "B4b3ie6MZjUg",
-        "outputId": "d92b0d6c-33d5-482c-c334-2768c6fddd33",
+        "outputId": "089d6529-9fe8-46f3-f6e9-4e4912976dae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -184,7 +184,7 @@
       ],
       "metadata": {
         "id": "2rLGNAn7edF8",
-        "outputId": "fbc5728f-6da1-415e-c423-cf92bef4cb25",
+        "outputId": "9cc4a248-e192-4a70-c424-1863dbeef853",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -196,8 +196,8 @@
           "name": "stdout",
           "text": [
             "Downloading imdb-dataset.zip to /content\n",
-            "100% 1.03G/1.04G [00:35<00:00, 41.6MB/s]\n",
-            "100% 1.04G/1.04G [00:35<00:00, 31.4MB/s]\n"
+            " 99% 1.02G/1.04G [00:08<00:00, 118MB/s]\n",
+            "100% 1.04G/1.04G [00:08<00:00, 133MB/s]\n"
           ]
         }
       ]
@@ -215,6 +215,7 @@
       "cell_type": "code",
       "source": [
         "# import as dataframe\n",
+        "\n",
         "data = spark.read.option(\"delimiter\", \"\\t\").option(\"header\", True).csv(\"title.principals.tsv/data.tsv\").limit(10000) "
       ],
       "metadata": {
@@ -226,73 +227,14 @@
     {
       "cell_type": "code",
       "source": [
-        "#data.cache()\n",
-        "#data.count()"
-      ],
-      "metadata": {
-        "id": "s7iVJqBTTRJM",
-        "outputId": "f315731f-5d38-4689-dcf7-4f612ae11be0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "DataFrame[tconst: string, ordering: string, nconst: string, category: string, job: string, characters: string]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#data.take(5)"
-      ],
-      "metadata": {
-        "id": "9c7_OeyPfPFm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# drop unwanted columns\n",
+        "\n",
         "data1 = data.drop(\"ordering\",\"category\",\"job\", \"characters\")"
       ],
       "metadata": {
         "id": "9kul16g-19lR"
       },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#data1.take(5)"
-      ],
-      "metadata": {
-        "id": "KybhhdtI2mpy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#data1.printSchema()"
-      ],
-      "metadata": {
-        "id": "83lOTb-lkM_R"
-      },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -300,14 +242,12 @@
       "source": [
         "# rename columns\n",
         "\n",
-        "data2 = data1.selectExpr(\"tconst as title\", \"nconst as actor\")\n",
-        "\n",
-        "#data2.printSchema()"
+        "data2 = data1.selectExpr(\"tconst as title\", \"nconst as actor\")\n"
       ],
       "metadata": {
         "id": "-iVve5mH4V_k"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -324,7 +264,7 @@
       "metadata": {
         "id": "IM0-5HQIs7kt"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -339,12 +279,12 @@
       ],
       "metadata": {
         "id": "HJ8rBtLq7lkr",
-        "outputId": "91fd6fe3-3acc-47f1-cc6d-13556ee4fa40",
+        "outputId": "af0364fd-f723-4124-b611-52668de184a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,12 +327,12 @@
       ],
       "metadata": {
         "id": "4MD2ipe-H_bq",
-        "outputId": "a2daa9d5-ee38-4b88-bbd9-978826af96de",
+        "outputId": "069db77b-fbd7-4c66-9705-ccbf4262be4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,20 +346,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 14
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# simple_rdd.count()"
-      ],
-      "metadata": {
-        "id": "1EAbFdnOO8Vd"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -431,7 +360,7 @@
       ],
       "metadata": {
         "id": "2z_C6sVbr4Gw",
-        "outputId": "fe06a3b4-8b5f-489e-f751-2b74a4521a42",
+        "outputId": "fb988d5c-1d5a-41de-fb80-63da67b46b97",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -460,7 +389,7 @@
       ],
       "metadata": {
         "id": "mRxL65h1tGPb",
-        "outputId": "b84afa44-a09c-49e9-94ac-136bc3ec9ee3",
+        "outputId": "90ad8329-0aef-4187-88ec-ef841a6a6ee0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -489,7 +418,7 @@
       ],
       "metadata": {
         "id": "xaO5hctZ5W3O",
-        "outputId": "64532729-05a0-4c30-cb84-196c0c7b9277",
+        "outputId": "eb12742f-a0a3-4061-e63d-2f75db03bbb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -518,7 +447,7 @@
       ],
       "metadata": {
         "id": "nPasjga__PIC",
-        "outputId": "7f4b95a9-1a1a-43d0-d161-7b86907946a2",
+        "outputId": "ad949e3d-a961-49f6-b468-46bfce2f6f81",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -562,7 +491,7 @@
       ],
       "metadata": {
         "id": "7VC5qH-C-5u2",
-        "outputId": "c6aade4d-4f27-41b7-e99e-66d0adaccd83",
+        "outputId": "91e3439f-31cf-47da-bd16-9faa3796ef37",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -591,7 +520,7 @@
       ],
       "metadata": {
         "id": "tjdE5grwvfBn",
-        "outputId": "c8d70696-e6bd-4b50-dce9-dfdb1991847e",
+        "outputId": "751ea098-ebde-447f-ea85-2d35c6c3a33f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -687,7 +616,7 @@
       ],
       "metadata": {
         "id": "_nEHmY0AFFTN",
-        "outputId": "53bd9709-8475-4c77-b244-1120335d596a",
+        "outputId": "17bcd51a-f322-4c4e-c7cc-ce6c6458fdc8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -726,7 +655,7 @@
       ],
       "metadata": {
         "id": "mDPGx6UfM_Pq",
-        "outputId": "cf0385c6-7fd5-453a-880f-abb62069024f",
+        "outputId": "c92eef28-0c66-4a45-abd0-c949fca20214",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -761,23 +690,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#for key, value in dizionario.items():\n",
-        "#    print(key, ' : ', value)"
-      ],
-      "metadata": {
-        "id": "drMmifqI9IzL"
-      },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# define map function\n",
+        "# define map function that takes the connection matrix and substitutes the original movie id values with the sequantial numbers from the dictionary\n",
         "\n",
-        "# prende connection matrix e sostituisce i nomi originali con quelli sequenziali del dizionario\n",
-        "\n",
-        "# risultato : nodo partenza nodo arrivo e probabilità\n",
         "\n",
         "def remap(x):\n",
         "  \n",
@@ -789,7 +703,7 @@
         "  j = dizionario[j]\n",
         "\n",
         "  #recompose\n",
-        "  nuovatupla = ((i),(j,f))\n",
+        "  nuovatupla = ((i),(j,f)) # i: arrival node, j: starting node, f: probability of going from j to i\n",
         "\n",
         "  return nuovatupla\n",
         "\n",
@@ -799,19 +713,38 @@
       "metadata": {
         "id": "755OS8bKCnW9"
       },
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "mapped.take(50)"
+        "#mapped.take(5)"
       ],
       "metadata": {
-        "id": "XXNBoNWT9cVK"
+        "id": "XXNBoNWT9cVK",
+        "outputId": "bc8f3106-321c-4ccd-f0f4-ea07cd79648a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0, (1524, 0.043478260869565216)),\n",
+              " (0, (1626, 0.043478260869565216)),\n",
+              " (0, (1732, 0.043478260869565216)),\n",
+              " (0, (1839, 0.043478260869565216)),\n",
+              " (0, (1373, 0.043478260869565216))]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -825,20 +758,7 @@
       "metadata": {
         "id": "Xyy3-SaIlL8_"
       },
-      "execution_count": 37,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# printo solo nodo arrivo e prob da mapped\n",
-        "\n",
-        "#mapped.mapValues(lambda x : x[1]).collect()"
-      ],
-      "metadata": {
-        "id": "IzdGCe8TPpp-"
-      },
-      "execution_count": 34,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -858,7 +778,7 @@
       "metadata": {
         "id": "vLpBZbQCnqKF"
       },
-      "execution_count": 38,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -891,12 +811,12 @@
       ],
       "metadata": {
         "id": "tqqkg3mFnusX",
-        "outputId": "0999e2ff-b867-444f-fae4-0358153e7494",
+        "outputId": "d0e54d1a-52d4-4237-ade9-b3e66def2ef5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1213,15 +1133,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "mD_SlyNeh6jw"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
